# tonic-sysinfo

./: Cargo.toml  README.md  build.rs
examples/: example_watch.rs
proto/: sysinfo.proto
src/: lib.rs  server.rs
src/impls/: cpu_info.rs  disk_info.rs  mem_info.rs  mod.rs  system.rs
tests/: bootstrap.rs
