[package]
name = "tonic-sysinfo"
version = "0.1.2"
authors = ["Rust Latam <rust.lang.latam@gmail.com>"]
categories = ["network-programming", "asynchronous"]
description = "A gRPC service for monitoring system resources such as CPU, memory, and disk."
homepage = "https://github.com/RustLangLatam"
keywords = ["rpc", "grpc", "async", "sysinfo"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/RustLangLatam/tonic-sysinfo"
rust-version = "1.80.0"
edition = "2021"

[features]
default = ["transport"]
transport = []

[dependencies]
async-stream = "0.3"
prost = "0.13"
tokio = {version = "1.40", features = ["sync"]}
tokio-stream = "0.1"
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost"] }
sysinfo = "0.31"
futures-util = "0.3"

[dev-dependencies]
tokio = {version = "1.40", features = ["rt-multi-thread", "macros"]}
tokio-stream = "0.1"
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }
prost-types = "0.13"

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }